helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-test
  namespace: url-app

# helm install traefik traefik/traefik --version 21.2.0
# Traefik needs to be setup as a nodeport

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-app
                port:
                  number: 8000
